WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16436
Alt+Space key opens window/frame menu and scrolls the page down
https://bugs.webkit.org/show_bug.cgi?id=16436
Summary
Alt+Space key opens window/frame menu and scrolls the page down
Louise
Reported
2007-12-14 04:22:43 PST
In Windows, Alt+Space key or Alt then Space key usually opens a menu for resizing the window/frame. In Safari + webkit, pressing Alt+Space key opens the resize menu but also scrolls the page down. Pressing Alt key and then space key acts the same way as IE does. Reproducible: Always Steps to reproduce: When you have focus in any area of Safari 1) pressing Alt+Space key Actual Result: The menu for resizing window opens and the page is scrolled down. Expected Result: The menu for resizing window opens without page scrolling down. 2) pressing Alt key, then Space key (the result is same as IE) Actual Result: The menu for resizing window opens without page scrolling down. Expected Result: The menu for resizing window opens without page scrolling down. tested with Safari 3.0.4 (523.12.9) Webkit
r28669
, Windows XP SP2
Attachments
proposed fix
(5.81 KB, patch)
2007-12-14 07:27 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Louise
Comment 1
2007-12-14 04:23:32 PST
I'm not sure if this is an expected behavior for Safari+ Webkit but since it is different from other Windows applications, I'll file a bug. If this was intended, please inform me. thanks.
Louise
Comment 2
2007-12-14 04:24:21 PST
After
r28707
, Alt+Space key does not open the resize menu and just makes the page scroll down. tested with Safari 3.0.4 (523.12.9) Webkit
r28707
and
r28711
Windows XP SP2
Louise
Comment 3
2007-12-14 05:02:54 PST
with Safari 3.0.4 (523.12.9) Webkit
r28382
-
r28586
Alt+Space, Alt then Space both showed resize menu in top left of the window without page scroll -i.e. same behavior as IE 7
Alexey Proskuryakov
Comment 4
2007-12-14 07:27:06 PST
Created
attachment 17890
[details]
proposed fix
Maciej Stachowiak
Comment 5
2007-12-14 15:34:56 PST
Comment on
attachment 17890
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 6
2007-12-15 01:08:46 PST
Committed revision 28746.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug