        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=16436
        Alt+Space works incorrectly

        Test: platform/win/fast/events/alt-space-scroll.html

        * WebView.cpp:
        (WebView::keyDown):
        (WebView::keyPress):
        We do not handle WM_SYSCHAR events.



Canonical link: https://commits.webkit.org/22611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28746 268f45cc-cd09-0410-ab3c-d52691b4dbfc